@@ -1,5 +1,11 @@
 2002-03-21  Seth Nickell  <snickell@stanford.edu>
 
+	* background-properties-capplet.c: (main):
+
+	Set the window icon.
+
+2002-03-21  Seth Nickell  <snickell@stanford.edu>
+
 	* background-properties-capplet.c: (string_to_orientation),
 	(update_color_widget_labels_and_visibility),
 	(peditor_value_changed), (setup_dialog), (create_dialog):
